LDADD=../../../hfst2/libhfst.la
AM_CPPFLAGS=-I../../../hfst2 -I../../..
AM_CXXFLAGS = -Wall -Wextra -Wcast-qual  -Wno-deprecated -I../src/ -I../../../hfst2 -I../../..
check_PROGRAMS = \
	string_manipulation_tests \
	rule_parts_tests \
	VariableContainer_tests \
	VariableComputer_tests \
	RuleVariableComputer_tests \
	RuleModifier_tests \
	RuleCompiler_tests \
	GrammarCompiler_tests \
	TextToFst WeightedTextToFst \
	CompareFsts \
	CompareWeightedFsts \
	GrammarTest1 WeightedGrammarTest1 \
	GrammarTest2 WeightedGrammarTest2 \
	GrammarTest3 WeightedGrammarTest3 \
	GrammarTest4 WeightedGrammarTest4 \
	GrammarTest5 WeightedGrammarTest5 \
	GrammarTest6 WeightedGrammarTest6 \
	GrammarTest7 WeightedGrammarTest7 \
	GrammarTest8 WeightedGrammarTest8 \
	GrammarTest9 WeightedGrammarTest9 \
	GrammarTest10 WeightedGrammarTest10 \
	GrammarTest11 WeightedGrammarTest11 \
	GrammarTest12 WeightedGrammarTest12 \
	GrammarTest13 WeightedGrammarTest13 \
	GrammarTest14 WeightedGrammarTest14 \
	GrammarTest15 WeightedGrammarTest15 \
	GrammarTest16 WeightedGrammarTest16 \
	GrammarTest17 WeightedGrammarTest17 \
	GrammarTest18 WeightedGrammarTest18 \
	GrammarTest19 WeightedGrammarTest19 \
	GrammarTest20 WeightedGrammarTest20 \
	GrammarTest21 WeightedGrammarTest21 \
	GrammarTest22 WeightedGrammarTest22 \
	GrammarTest23 WeightedGrammarTest23 \
	GrammarTest24 WeightedGrammarTest24 \
	GrammarTest25 WeightedGrammarTest25 \
	GrammarTest26 WeightedGrammarTest26 \
	GrammarTest27 WeightedGrammarTest27 \
	GrammarTest28 WeightedGrammarTest28 \
	GrammarTest29 WeightedGrammarTest29 \
	GrammarTest30 WeightedGrammarTest30 \
	GrammarTest31 WeightedGrammarTest31 \
	GrammarTest32 WeightedGrammarTest32 \
	GrammarTest33 WeightedGrammarTest33 \
	GrammarTest34 WeightedGrammarTest34 \
	GrammarTest35 WeightedGrammarTest35 \
	GrammarTest36 WeightedGrammarTest36 \
	GrammarTest37 WeightedGrammarTest37 \
	GrammarTest38 WeightedGrammarTest38 \
	GrammarTest39 WeightedGrammarTest39 \
	GrammarTest40 WeightedGrammarTest40 \
	GrammarTest41 WeightedGrammarTest41 \
	GrammarTest42 WeightedGrammarTest42 \
	GrammarTest43 WeightedGrammarTest43 \
	GrammarTest44 WeightedGrammarTest44 \
	GrammarTest45 WeightedGrammarTest45 \
	GrammarTest46 WeightedGrammarTest46 \
	GrammarTest47 WeightedGrammarTest47 \
	GrammarTest48 WeightedGrammarTest48 \
	GrammarTest49 WeightedGrammarTest49 \
	GrammarTest50 WeightedGrammarTest50 \
	GrammarTest51 WeightedGrammarTest51 \
	GrammarTest52 WeightedGrammarTest52 \
	GrammarTest53 WeightedGrammarTest53 \
	GrammarTest54 WeightedGrammarTest54 \
	GrammarTest55 WeightedGrammarTest55 \
	GrammarTest56 WeightedGrammarTest56 \
	GrammarTest57 WeightedGrammarTest57 \
	CleanAllTestfiles

EXTRA_DIST = \
	test_grammar1 test_grammar1.txt_fst \
	test_grammar2 test_grammar2.txt_fst \
	test_grammar3 test_grammar3.txt_fst \
	test_grammar4 test_grammar4.txt_fst \
	test_grammar5 test_grammar5.txt_fst \
	test_grammar6 test_grammar6.txt_fst \
	test_grammar7 test_grammar7.txt_fst \
	test_grammar8 test_grammar8.txt_fst \
	test_grammar9 test_grammar9.txt_fst \
	test_grammar10 test_grammar10.txt_fst \
	test_grammar11 test_grammar11.txt_fst \
	test_grammar12 test_grammar12.txt_fst \
	test_grammar13 test_grammar13.txt_fst \
	test_grammar14 test_grammar14.txt_fst \
	test_grammar15 test_grammar15.txt_fst \
	test_grammar16 test_grammar16.txt_fst \
	test_grammar17 test_grammar17.txt_fst \
	test_grammar18 test_grammar18.txt_fst \
	test_grammar19 test_grammar19.txt_fst \
	test_grammar20 test_grammar20.txt_fst \
	test_grammar21 test_grammar21.txt_fst \
	test_grammar22 test_grammar22.txt_fst \
	test_grammar23 test_grammar23.txt_fst \
	test_grammar24 test_grammar24.txt_fst \
	test_grammar25 test_grammar25.txt_fst \
	test_grammar26 test_grammar26.txt_fst \
	test_grammar27 test_grammar27.txt_fst \
	test_grammar28 test_grammar28.txt_fst \
	test_grammar29 test_grammar29.txt_fst \
	test_grammar30 test_grammar30.txt_fst \
	test_grammar31 test_grammar31.txt_fst \
	test_grammar32 test_grammar32.txt_fst \
	test_grammar33 test_grammar33.txt_fst \
	test_grammar34 test_grammar34.txt_fst \
	test_grammar35 test_grammar35.txt_fst \
	test_grammar36 test_grammar36.txt_fst \
	test_grammar37 test_grammar37.txt_fst \
	test_grammar38 test_grammar38.txt_fst \
	test_grammar39 test_grammar39.txt_fst \
	test_grammar40 test_grammar40.txt_fst \
	test_grammar41 test_grammar41.txt_fst \
	test_grammar42 test_grammar42.txt_fst \
	test_grammar43 test_grammar43.txt_fst \
	test_grammar44 test_grammar44.txt_fst \
	test_grammar45 test_grammar45.txt_fst \
	test_grammar46 test_grammar46.txt_fst \
	test_grammar47 test_grammar47.txt_fst \
	test_grammar48 test_grammar48.txt_fst \
	test_grammar49 test_grammar49.txt_fst \
	test_grammar50 test_grammar50.txt_fst \
	test_grammar51 test_grammar51.txt_fst \
	test_grammar52 test_grammar52.txt_fst \
	test_grammar53 test_grammar53.txt_fst \
	test_grammar54 test_grammar54.txt_fst \
	test_grammar55 test_grammar55.txt_fst \
	test_grammar56 test_grammar56.txt_fst \
	test_grammar57 test_grammar57.txt_fst

string_manipulation_tests_SOURCES = \
	string_manipulation_tests.cc \
	string_manipulation_tests.h \
	../src/string_manipulation.cc

rule_parts_tests_SOURCES = \
	rule_parts_tests.cc \
	rule_parts_tests.h \
	../src/string_manipulation.cc \
	../src/rule_parts.cc 

VariableContainer_tests_SOURCES = \
	VariableContainer_tests.cc \
	VariableContainer_tests.h \
	../src/VariableContainer.cc

VariableComputer_tests_SOURCES = \
	VariableComputer_tests.cc \
	VariableComputer_tests.h  \
	../src/VariableComputer.cc \
	../src/VariableContainer.cc

RuleVariableComputer_tests_SOURCES = \
	RuleVariableComputer_tests.cc \
	RuleVariableComputer_tests.h  \
	../src/RuleVariableComputer.h \
	../src/RuleVariableComputer.cc \
	../src/VariableComputer.cc \
	../src/VariableContainer.cc 

RuleModifier_tests_SOURCES = \
	RuleModifier_tests.cc \
	RuleModifier_tests.h \
	../src/string_manipulation.cc \
	../src/rule_parts.cc \
	../src/RuleModifier.cc \
	../src/VariableComputer.cc \
	../src/RuleVariableComputer.cc \
	../src/VariableContainer.cc

RuleCompiler_tests_SOURCES = \
	RuleCompiler_tests.cc \
	RuleCompiler_tests.h \
	../src/CompileUtilities.cc \
	../src/CompileUtilities.h \
	../src/RuleCompiler.cc \
	../src/RuleCompiler.h \
	../src/RightArrowRule.cc \
	../src/RightArrowRule.h \
	../src/LeftArrowRule.cc \
	../src/LeftArrowRule.h \
	../src/string_manipulation.cc \
	../src/string_manipulation.h

GrammarCompiler_tests_SOURCES = \
	GrammarCompiler_tests.cc \
	GrammarCompiler_tests.h \
	../src/CompileUtilities.cc \
	../src/CompileUtilities.h \
	../src/RuleCompiler.cc \
	../src/RuleCompiler.h \
	../src/GrammarCompiler.h \
	../src/GrammarCompiler.cc \
	../src/RightArrowRule.cc \
	../src/RightArrowRule.h \
	../src/LeftArrowRule.cc \
	../src/LeftArrowRule.h \
	../src/string_manipulation.cc \
	../src/string_manipulation.h

TextToFst_SOURCES = TextToFst.cc

WeightedTextToFst_SOURCES = WeightedTextToFst.cc

CompareFsts_SOURCES = CompareFsts.cc

CompareWeightedFsts_SOURCES = CompareWeightedFsts.cc

GrammarTest1_SOURCES = GrammarTest1.cc
WeightedGrammarTest1_SOURCES = WeightedGrammarTest1.cc
GrammarTest2_SOURCES = GrammarTest2.cc
WeightedGrammarTest2_SOURCES = WeightedGrammarTest2.cc
GrammarTest3_SOURCES = GrammarTest3.cc
WeightedGrammarTest3_SOURCES = WeightedGrammarTest3.cc
GrammarTest4_SOURCES = GrammarTest4.cc
WeightedGrammarTest4_SOURCES = WeightedGrammarTest4.cc
GrammarTest5_SOURCES = GrammarTest5.cc
WeightedGrammarTest5_SOURCES = WeightedGrammarTest5.cc
GrammarTest6_SOURCES = GrammarTest6.cc
WeightedGrammarTest6_SOURCES = WeightedGrammarTest6.cc
GrammarTest7_SOURCES = GrammarTest7.cc
WeightedGrammarTest7_SOURCES = WeightedGrammarTest7.cc
GrammarTest8_SOURCES = GrammarTest8.cc
WeightedGrammarTest8_SOURCES = WeightedGrammarTest8.cc
GrammarTest9_SOURCES = GrammarTest9.cc
WeightedGrammarTest9_SOURCES = WeightedGrammarTest9.cc
GrammarTest10_SOURCES = GrammarTest10.cc
WeightedGrammarTest10_SOURCES = WeightedGrammarTest10.cc
GrammarTest11_SOURCES = GrammarTest11.cc
WeightedGrammarTest11_SOURCES = WeightedGrammarTest11.cc
GrammarTest12_SOURCES = GrammarTest12.cc
WeightedGrammarTest12_SOURCES = WeightedGrammarTest12.cc
GrammarTest13_SOURCES = GrammarTest13.cc
WeightedGrammarTest13_SOURCES = WeightedGrammarTest13.cc
GrammarTest14_SOURCES = GrammarTest14.cc
WeightedGrammarTest14_SOURCES = WeightedGrammarTest14.cc
GrammarTest15_SOURCES = GrammarTest15.cc
WeightedGrammarTest15_SOURCES = WeightedGrammarTest15.cc
GrammarTest16_SOURCES = GrammarTest16.cc
WeightedGrammarTest16_SOURCES = WeightedGrammarTest16.cc
GrammarTest17_SOURCES = GrammarTest17.cc
WeightedGrammarTest17_SOURCES = WeightedGrammarTest17.cc
GrammarTest18_SOURCES = GrammarTest18.cc
WeightedGrammarTest18_SOURCES = WeightedGrammarTest18.cc
GrammarTest19_SOURCES = GrammarTest19.cc
WeightedGrammarTest19_SOURCES = WeightedGrammarTest19.cc
GrammarTest20_SOURCES = GrammarTest20.cc
WeightedGrammarTest20_SOURCES = WeightedGrammarTest20.cc
GrammarTest21_SOURCES = GrammarTest21.cc
WeightedGrammarTest21_SOURCES = WeightedGrammarTest21.cc
GrammarTest22_SOURCES = GrammarTest22.cc
WeightedGrammarTest22_SOURCES = WeightedGrammarTest22.cc
GrammarTest23_SOURCES = GrammarTest23.cc
WeightedGrammarTest23_SOURCES = WeightedGrammarTest23.cc
GrammarTest24_SOURCES = GrammarTest24.cc
WeightedGrammarTest24_SOURCES = WeightedGrammarTest24.cc
GrammarTest25_SOURCES = GrammarTest25.cc
WeightedGrammarTest25_SOURCES = WeightedGrammarTest25.cc
GrammarTest26_SOURCES = GrammarTest26.cc
WeightedGrammarTest26_SOURCES = WeightedGrammarTest26.cc
GrammarTest27_SOURCES = GrammarTest27.cc
WeightedGrammarTest27_SOURCES = WeightedGrammarTest27.cc
GrammarTest28_SOURCES = GrammarTest28.cc
WeightedGrammarTest28_SOURCES = WeightedGrammarTest28.cc
GrammarTest29_SOURCES = GrammarTest29.cc
WeightedGrammarTest29_SOURCES = WeightedGrammarTest29.cc
GrammarTest30_SOURCES = GrammarTest30.cc
WeightedGrammarTest30_SOURCES = WeightedGrammarTest30.cc
GrammarTest31_SOURCES = GrammarTest31.cc
WeightedGrammarTest31_SOURCES = WeightedGrammarTest31.cc
GrammarTest32_SOURCES = GrammarTest32.cc
WeightedGrammarTest32_SOURCES = WeightedGrammarTest32.cc
GrammarTest33_SOURCES = GrammarTest33.cc
WeightedGrammarTest33_SOURCES = WeightedGrammarTest33.cc
GrammarTest34_SOURCES = GrammarTest34.cc
WeightedGrammarTest34_SOURCES = WeightedGrammarTest34.cc
GrammarTest35_SOURCES = GrammarTest35.cc
WeightedGrammarTest35_SOURCES = WeightedGrammarTest35.cc
GrammarTest36_SOURCES = GrammarTest36.cc
WeightedGrammarTest36_SOURCES = WeightedGrammarTest36.cc
GrammarTest37_SOURCES = GrammarTest37.cc
WeightedGrammarTest37_SOURCES = WeightedGrammarTest37.cc
GrammarTest38_SOURCES = GrammarTest38.cc
WeightedGrammarTest38_SOURCES = WeightedGrammarTest38.cc
GrammarTest39_SOURCES = GrammarTest39.cc
WeightedGrammarTest39_SOURCES = WeightedGrammarTest39.cc
GrammarTest40_SOURCES = GrammarTest40.cc
WeightedGrammarTest40_SOURCES = WeightedGrammarTest40.cc
GrammarTest41_SOURCES = GrammarTest41.cc
WeightedGrammarTest41_SOURCES = WeightedGrammarTest41.cc
GrammarTest42_SOURCES = GrammarTest42.cc
WeightedGrammarTest42_SOURCES = WeightedGrammarTest42.cc
GrammarTest43_SOURCES = GrammarTest43.cc
WeightedGrammarTest43_SOURCES = WeightedGrammarTest43.cc
GrammarTest44_SOURCES = GrammarTest44.cc
WeightedGrammarTest44_SOURCES = WeightedGrammarTest44.cc
GrammarTest45_SOURCES = GrammarTest45.cc
WeightedGrammarTest45_SOURCES = WeightedGrammarTest45.cc
GrammarTest46_SOURCES = GrammarTest46.cc
WeightedGrammarTest46_SOURCES = WeightedGrammarTest46.cc
GrammarTest47_SOURCES = GrammarTest47.cc
WeightedGrammarTest47_SOURCES = WeightedGrammarTest47.cc
GrammarTest48_SOURCES = GrammarTest48.cc
WeightedGrammarTest48_SOURCES = WeightedGrammarTest48.cc
GrammarTest49_SOURCES = GrammarTest49.cc
WeightedGrammarTest49_SOURCES = WeightedGrammarTest49.cc
GrammarTest50_SOURCES = GrammarTest50.cc
WeightedGrammarTest50_SOURCES = WeightedGrammarTest50.cc
GrammarTest51_SOURCES = GrammarTest51.cc
WeightedGrammarTest51_SOURCES = WeightedGrammarTest51.cc
GrammarTest52_SOURCES = GrammarTest52.cc
WeightedGrammarTest52_SOURCES = WeightedGrammarTest52.cc
GrammarTest53_SOURCES = GrammarTest53.cc
WeightedGrammarTest53_SOURCES = WeightedGrammarTest53.cc
GrammarTest54_SOURCES = GrammarTest54.cc
WeightedGrammarTest54_SOURCES = WeightedGrammarTest54.cc
GrammarTest55_SOURCES = GrammarTest55.cc
WeightedGrammarTest55_SOURCES = WeightedGrammarTest55.cc
GrammarTest56_SOURCES = GrammarTest56.cc
WeightedGrammarTest56_SOURCES = WeightedGrammarTest56.cc
GrammarTest57_SOURCES = GrammarTest57.cc
WeightedGrammarTest57_SOURCES = WeightedGrammarTest57.cc

CleanAllTestfiles_SOURCES = CleanAllTestfiles.cc

TESTS = \
	string_manipulation_tests \
	rule_parts_tests \
	VariableContainer_tests \
	VariableComputer_tests \
	RuleVariableComputer_tests \
	RuleModifier_tests \
	RuleCompiler_tests \
	GrammarCompiler_tests \
	GrammarTest1 \
	WeightedGrammarTest1 \
	GrammarTest2 \
	WeightedGrammarTest2 \
	GrammarTest3 \
	WeightedGrammarTest3 \
	GrammarTest4 \
	WeightedGrammarTest4 \
	GrammarTest5 \
	WeightedGrammarTest5 \
	GrammarTest6 \
	WeightedGrammarTest6 \
	GrammarTest7 \
	WeightedGrammarTest7 \
	GrammarTest8 \
	WeightedGrammarTest8 \
	GrammarTest9 \
	WeightedGrammarTest9 \
	GrammarTest10 \
	WeightedGrammarTest10 \
	GrammarTest11 \
	WeightedGrammarTest11 \
	GrammarTest12 \
	WeightedGrammarTest12 \
	GrammarTest13 \
	WeightedGrammarTest13 \
	GrammarTest14 \
	WeightedGrammarTest14 \
	GrammarTest15 \
	WeightedGrammarTest15 \
	GrammarTest16 \
	WeightedGrammarTest16 \
	GrammarTest17 \
	WeightedGrammarTest17 \
	GrammarTest18 \
	WeightedGrammarTest18 \
	GrammarTest19 \
	WeightedGrammarTest19 \
	GrammarTest20 \
	WeightedGrammarTest20 \
	GrammarTest21 \
	WeightedGrammarTest21 \
	GrammarTest22 \
	WeightedGrammarTest22 \
	GrammarTest23 \
	WeightedGrammarTest23 \
	GrammarTest24 \
	WeightedGrammarTest24 \
	GrammarTest25 \
	WeightedGrammarTest25 \
	GrammarTest26 \
	WeightedGrammarTest26 \
	GrammarTest27 \
	WeightedGrammarTest27 \
	GrammarTest28 \
	WeightedGrammarTest28 \
	GrammarTest29 \
	WeightedGrammarTest29 \
	GrammarTest30 \
	WeightedGrammarTest30 \
	GrammarTest31 \
	WeightedGrammarTest31 \
	GrammarTest32 \
	WeightedGrammarTest32 \
	GrammarTest33 WeightedGrammarTest33 \
	GrammarTest34 WeightedGrammarTest34 \
	GrammarTest35 WeightedGrammarTest35 \
	GrammarTest36 WeightedGrammarTest36 \
	GrammarTest37 WeightedGrammarTest37 \
	GrammarTest38 WeightedGrammarTest38 \
	GrammarTest39 WeightedGrammarTest39 \
	GrammarTest40 WeightedGrammarTest40 \
	GrammarTest41 WeightedGrammarTest41 \
	GrammarTest42 WeightedGrammarTest42 \
	GrammarTest43 WeightedGrammarTest43 \
	GrammarTest44 WeightedGrammarTest44 \
	GrammarTest45 WeightedGrammarTest45 \
	GrammarTest46 WeightedGrammarTest46 \
	GrammarTest47 WeightedGrammarTest47 \
	GrammarTest48 WeightedGrammarTest48 \
	GrammarTest49 WeightedGrammarTest49 \
	GrammarTest50 WeightedGrammarTest50 \
	GrammarTest51 WeightedGrammarTest51 \
	GrammarTest52 WeightedGrammarTest52 \
	GrammarTest53 WeightedGrammarTest53 \
	GrammarTest54 WeightedGrammarTest54 \
	GrammarTest55 WeightedGrammarTest55 \
	GrammarTest56 WeightedGrammarTest56 \
	GrammarTest57 WeightedGrammarTest57 \
	CleanAllTestfiles
